# puzzlefs

./: Makefile
builder/: Cargo.toml
builder/src/: fastcdc_fs.rs  lib.rs
compression/: Cargo.toml
compression/src/: lib.rs  zstd_wrapper.rs
exe/: Cargo.toml
exe/src/: main.rs
experiments/: README.md  deduplication_stats.pl
extractor/src/: lib.rs
oci/src/: descriptor.rs  lib.rs
reader/: Cargo.toml
reader/src/: fuse.rs  lib.rs  puzzlefs.rs  walk.rs
