[package]
name = "builder"
version = "0.1.0"
authors = ["Tycho Andersen <tycho@tycho.pizza>"]
edition = "2018"

[dependencies]
compression = { path = "../compression" }
format = { path = "../format" }
oci = { path = "../oci" }
reader = { path = "../reader" }
fsverity_helpers = { path = "../fsverity_helpers" }
common = { path = "../common" }
walkdir = "2"
serde_cbor = "*"
fastcdc = { git = "https://github.com/ariel-miculas/fastcdc-rs.git", branch="support_parallel_operations" }
nix = "*"
hex = "*"
rayon = "1.7.0"

[dev-dependencies]
tempfile = "*"
serde = "*"
fastrand = "*"
anyhow = "*"
